css/music-modal.css
.music-button {
    padding: 10px 20px;
    background: var(--accent-pink);
    color: white;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    font-size: 24px;
    font-family: "Smooch Sans";
    transition: background-color 0.3s ease;
}

.music-button:hover {
    background: var(--accent-aqua);
}

/* Modal */
.music-modal {
    display: none;
    position: fixed;
    z-index: 1000;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.8);
    font-family: "Smooch Sans";
    &.visible {
        display: block;
    }
}

.modal-content {
    background-color: var(--card-background);
    margin: 5% auto;
    padding: 20px;
    border-radius: 8px;
    width: 80%;
    height: 100%;
    max-width: 800px;
    max-height: 80vh;
    overflow-y: auto;
    h2 {
        font-size: 32px;
        margin-bottom: 0;
        margin-top: 0;
    }
    color: var(--accent-aqua);
    .modal-description {
        color: white;
    }
}

.close-modal {
    color: var(--accent-aqua);
    float: right;
    font-size: 28px;
    font-weight: bold;
    cursor: pointer;
}

.close-modal:hover {
    color: var(--accent-pink);
}

/* Song player */
.song-item {
    display: flex;
    align-items: center;
    padding: 5px;
    margin-bottom: 10px;
    background: var(--background-dark);
    border-radius: 4px;
    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
    &:last-of-type {
        margin-bottom: 30px;
    }
}

.song-info {
    position: relative;
    flex: 1;
    margin-right: 15px;
    width: 100px;
    max-width: 100px;
    height: 100px;
    overflow: visible;
}

.song-title {
    color: white;
    font-weight: bold;
    width: max-content;
    position: absolute;
    font-size: 20px;
}

.song-image-container {
    top: 0;
    position: absolute;
    width: 100px;
    height: 100px;
    z-index: 0;
    overflow: hidden;
    .song-image {
        width: 100%;
    }
}

.song-player-container {
    flex: 1;
    display: flex;
    flex-direction: column;
    height: 100px;
    padding-right: 10px;
    position: relative;
}

.song-player {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: start;
}

.song-actions {
    position: absolute;
    bottom: 0;
    width: 100%;
    display: flex;
    flex-direction: row-reverse;
}

.progress-container {
    flex: 1;
    height: 8px;
    background: #e0e0e0;
    border-radius: 2px;
    margin: 0 10px;
    cursor: pointer;
}

.progress-bar {
    height: 100%;
    background: var(--accent-pink);
    border-radius: 2px;
    width: 0%;
}

.play-button {
    width: 30px;
    height: 30px;
    background: var(--accent-pink);
    border-radius: 50%;
    border: none;
    color: white;
    cursor: pointer;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 15px;
    line-height: 15px;
}

.play-button:hover {
    background-color: var(--accent-aqua);
}

.time-display {
    font-size: 12px;
    color: white;
    min-width: 40px;
    text-align: center;
}

/* Play controls */
.music-controller {
    position: fixed;
    width: 300px;
    height: 100px;
    bottom: 0;
    left: 50%;
    transform: translateX(-50%);
    background: var(--card-background-dark);
    z-index: 9999;
    border-top-right-radius: 100px;
    border-top-left-radius: 100px;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 10px;
    align-items: center;
    transition: bottom 0.5s ease-in-out;
    box-shadow: 0 0 15px var(--shadow-color);
    &.hidden {
        bottom: -100px;
        box-shadow: none;
    }
}

.now-playing-title {
    background: none;
    width: fit-content;
    border: none;
    color: white;
    cursor: pointer;
    transition: color 0.1s ease;
    background-color: var(--card-background);
    &:hover {
        color: var(--accent-aqua);
    }
}

.play-controls {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
    margin-top: 10px;
}

.control-button {
    background: none;
    background-color: var(--accent-aqua);
    border: none;
    font-size: 18px;
    cursor: pointer;
    padding: 10px;
    border-radius: 50%;
    width: 30px;
    height: 30px;
    display: flex;
    align-items: center;
    justify-content: center;
    background: var(--accent-aqua);
    transition: background-color 0.1s ease;

    &:hover {
        background-color: var(--accent-pink);
    }

    img {
        width: 15px;
        height: 15px;
    }
}

.control-icon {
    filter: brightness(100%) saturate(0%) invert(100%) contrast(103%);
    width: 15px;
    height: 15px;
}

/* Volume styling */
.volume-slider-container {
    position: absolute;
    bottom: 80px;
    left: 78%;
    transform: translateX(-50%);
    padding: 10px;
    background: var(--card-background-dark);
    box-shadow: 0 0 15px var(--shadow-color);
    border-radius: 4px;
    display: block;
    margin-bottom: 10px;
    z-index: 9999;
    transition: opacity 0.3s ease;
    opacity: 0;
    &.visible {
        opacity: 1;
    }
}

.volume-control:hover .volume-slider-container,
.volume-control:focus-within .volume-slider-container {
    display: block;
}

/* Custom vertical slider styling */
.volume-slider {
    -webkit-appearance: slider-vertical;
    width: 8px;
    height: 100px;
    padding: 0 5px;
    background-color: var(--accent-aqua);
}

/* For Firefox */
.volume-slider {
    writing-mode: bt-lr;
}

/* Custom slider thumb */
.volume-slider::-webkit-slider-thumb {
    -webkit-appearance: none;
    width: 16px;
    height: 16px;
    border-radius: 50%;
    background: white;
    cursor: pointer;
}

.volume-slider::-moz-range-thumb {
    width: 16px;
    height: 16px;
    border-radius: 50%;
    background: white;
    cursor: pointer;
}

